// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > inferencing > getInferences > 200 > ok 1`] = `
{
  "inferences": [
    {
      "_id": "test",
    },
  ],
}
`;

exports[`routes > inferencing > getInferences > audit > expected call 1`] = `
[
  {
    "_id": "test",
  },
]
`;
